--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Indie+Flower&display=swap");
-@import "reset.css";
-@import "variables.css";
+@import "./reset.css";
+@import "./variables.css";
 
 /* Components */
-@import "components/status-bar.css";
+@import "./components/status-bar.css";
+@import "./components/nav-bar.css";
 
 /* Screens */
-@import "screens/login.css";
+@import "./screens/login.css";
 
 body {
   font-family: "Dancing Script", cursive;
