--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -13,6 +13,33 @@
   justify-content: space-around;
 }
 
-.nav_link {
+.nav__link {
   color: #2e363e;
+  position: relative;
+}
+
+.nav__notification {
+  background-color: tomato;
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
+}
+
+.nav__dot {
+  display: block;
+  width: 7px;
+  height: 7px;
+  background-color: tomato;
+  border-radius: 4px;
+  position: absolute;
+  left: 30px;
+  bottom: 25px;
 }
