--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,6 +1,7 @@
 #friends-display-link {
-  text-align: center;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #fafafa;
   padding: 15px 0px;
   font-size: 17px;
@@ -8,4 +9,9 @@
 
 #friends-display-link i {
   color: rgba(0, 0, 0, 0.3);
+  margin: 0px 5px;
+}
+
+#friends-display-link span {
+  margin: 0px 5px;
 }
