--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -1,7 +1,7 @@
 .screen-header {
   display: flex;
   justify-content: space-between;
-  padding: 50px 25px 25px;
+  padding: 50px var(--horizontal-space);
 }
 
 .screen-header__title {
