--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -5,6 +5,7 @@
   background-color: #fafafa;
   padding: 15px 0px;
   font-size: 17px;
+  margin-bottom: 10px;
 }
 
 #friends-display-link i {
@@ -14,4 +15,8 @@
 
 #friends-display-link span {
   margin: 0px 5px;
+}
+
+.friends-screen {
+  padding: 0px var(--horizontal-space);
 }
