--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,7 @@ body {
   color: #2e363e;
   font-family: "Dancing Script", cursive;
 }
+
+.main-screen {
+  padding: 0px var(--horizontal-space);
+}
