--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -5,7 +5,8 @@
   background-color: #fafafa;
   padding: 15px 0px;
   font-size: 17px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  margin-top: -15px;
 }
 
 #friends-display-link i {
