--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -21,3 +21,12 @@
   text-align: center;
   margin-left: 25px;
 }
+
+.screen-header__icons span:last-child {
+  position: relative;
+}
+
+.screen-header__icons span:last-child .nav__dot {
+  left: -3px;
+  bottom: 20px;
+}
