Find Screen Part Two

--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -10,7 +10,7 @@
 }
 
 #friends-display-link i {
-  color: rgba(0, 0, 0, 0.3);
+  color: var(--gray-color);
   margin: 0px 5px;
 }
 
@@ -20,7 +20,7 @@
 
 .friends-screen__channel {
   margin-top: 25px;
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  border-top: var(--main-border);
   padding-top: 15px;
 }
 
