--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -33,7 +33,7 @@
 }
 
 .login-form__input::placeholder {
-  color: rgba(0, 0, 0, 0.4);
+  color: var(--gray-color);
 }
 
 .login-form__input:focus {
