--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,7 +1,7 @@
 .find-icons {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  padding-bottom: 25px;
 }
 
 .find-icons__icon {
@@ -16,4 +16,24 @@
 
 .find-icons__icon span {
   margin-top: 15px;
+}
+
+.recommended-friends {
+  border-top: var(--main-border);
+  border-bottom: var(--main-border);
+  padding: 25px 0px;
+  margin: 25px 0px;
+}
+
+.recommended-friends__title {
+  font-size: 12px;
+  color: var(--gray-color);
+}
+
+.recommended-friends span {
+  margin: 100px 0px;
+  display: block;
+  text-align: center;
+  font-size: 18px;
+  color: var(--gray-color);
 }
