--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -22,4 +22,15 @@
 
 .main-chat {
   margin-top: 130px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chat__timestamp {
+  color: white;
+  background-color: #92a4b2;
+  padding: 8px 15px;
+  font-size: 15px;
+  border-radius: 25px;
 }
