--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -111,7 +111,7 @@
   padding: 5px 25px;
   align-items: center;
   box-sizing: border-box;
-  transition: all 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
 .reply .reply__column:first-child {
@@ -176,7 +176,7 @@
   opacity: 0;
 }
 
-.reply:focus-within input {
+.reply input:focus {
   width: 95vw;
   transform: translateX(-11%) translateY(-80px);
 }
